# shove

./: Cargo.toml  README.md  shove  shove.man
src/: cfg.rs  cli.rs  ft.rs  log.rs  main.rs  rm.rs  shover.rs  util.rs
src/dot/: dots.rs  mod.rs  sh.rs
src/rm/: err.rs  mod.rs
