[package]
name = 'shove'
version = '0.0.0'
edition = '2021'

[dependencies]
atty = '0.2'
clap = {version = '3.0', features = ['derive']}
lazy_static = '1.4'
log = '0.4'
pathdiff = '0.2'
regex = '1.5'
same-file = '1.0'
shellexpand = '2.1'
termcolor = '1.1'
toml = '0.5'
walkdir = '2.3'

[dependencies.serde]
version = '1.0'
features = ['derive']
